整理整理再开发

--- a/blogJava/src/main/resources/application-dev.yml
+++ b/blogJava/src/main/resources/application-dev.yml
@@ -17,7 +17,7 @@ server:
 
 spring:
   application:
-    name: showLove
+    name: blog
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     name: defaultDataSource
