--- a/blogVue/blog/package.json
+++ b/blogVue/blog/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "async-validator": "^4.0.3",
     "axios": "^0.21.4",
     "element-ui": "^2.15.6",
     "jquery": "^3.6.0",
