--- a/blog-vue/package.json
+++ b/blog-vue/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "axios": "^0.21.4",
     "element-ui": "^2.15.6",
+    "jquery": "^2.2.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "jquery": "^2.2.1"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
