--- a/blog-java/src/main/resources/application.yml
+++ b/blog-java/src/main/resources/application.yml
@@ -19,7 +19,6 @@ spring:
     cache: true
     check-template: true
     check-template-location: true
-#    content-type: text/html
     servlet:
       content-type: text/html
     enabled: true
@@ -48,5 +47,7 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.alan.blog.entity
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 
