--- a/blog-vue/package.json
+++ b/blog-vue/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blog-vue",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "a vue project demo",
   "author": "cmrhyq <1678336204@qq.com>",
   "private": true,
   "scripts": {
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
-    "crypto": "^1.0.1",
     "element-ui": "^2.15.6",
-    "eosjs-ecc": "^4.0.7",
+    "file-loader": "^6.2.0",
     "jquery": "^2.2.1",
+    "js-md5": "^0.7.3",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
@@ -31,13 +33,15 @@
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "crypto-js": "^4.1.1",
     "css-loader": "^0.28.0",
+    "element-theme-chalk": "^2.15.6",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
+    "file-loader": "^1.1.7",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "js-md5": "^0.7.3",
     "node-notifier": "^5.1.2",
+    "node-sass": "^6.0.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -45,6 +49,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^4.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
