--- a/blog-java/src/main/resources/application-dev.yml
+++ b/blog-java/src/main/resources/application-dev.yml
@@ -22,7 +22,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     name: defaultDataSource
     password: Hyq0901.
-    url: jdbc:mysql://localhost:3306/demo?characterEncoding=utf-8&useSSl=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/demo?characterEncoding=utf-8&useSSl=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai&useAffectedRows=true
     username: root
   thymeleaf:
     cache: true
@@ -36,17 +36,17 @@ spring:
     mode: HTML5
     prefix: classpath:/templates/
     suffix: .html
-logging:
-  pattern:
-    #日志格式
-    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) - %clr([%t]){faint} %X{log_id} %clr(%logger{39}){cyan} %clr(:){faint} %m%n%wEx"
-    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} %5p - [%t] %X{log_id} %logger{39} : %m%n%wEx"
-  file:
-    path: src/main/resources/log
-    name: "%d{yyyy-MM-dd HH:mm:ss.SSS}-log.txt"
-    max-history: 7
-    max-size: 20MB
-    total-size-cap: 1GB
-    clean-history-on-start: false
-  level:
-    root: info
+#logging:
+#  pattern:
+#    #日志格式
+#    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) - %clr([%t]){faint} %X{log_id} %clr(%logger{39}){cyan} %clr(:){faint} %m%n%wEx"
+#    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} %5p - [%t] %X{log_id} %logger{39} : %m%n%wEx"
+#  file:
+#    path: src/main/resources/log
+#    name: "%d{yyyy-MM-dd HH:mm:ss.SSS}-log.txt"
+#    max-history: 7
+#    max-size: 20MB
+#    total-size-cap: 1GB
+#    clean-history-on-start: false
+#  level:
+#    root: info
