--- a/blog-vue/package.json
+++ b/blog-vue/package.json
@@ -10,12 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
     "axios": "^0.21.4",
+    "element-china-area-data": "^5.0.2",
     "element-ui": "^2.15.6",
     "jquery": "^2.2.1",
     "js-md5": "^0.7.3",
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "moment": "^2.29.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
